--- a/conda_env.yml
+++ b/conda_env.yml
@@ -8,10 +8,11 @@ dependencies:
   - cudatoolkit=9.2
   - absl-py
   - pyparsing
+  - gym=0.19.0
   - pip:
     - termcolor
-    - git+git://github.com/deepmind/dm_control.git
-    - git+git://github.com/denisyarats/dmc2gym.git
+    # - git+git://github.com/deepmind/dm_control.git these are installed locally now since they had to be modified
+    # - git+git://github.com/denisyarats/dmc2gym.git
     - tb-nightly
     - imageio
     - imageio-ffmpeg
