--- a/conda_env.yml
+++ b/conda_env.yml
@@ -5,7 +5,7 @@ dependencies:
   - python=3.7
   - pytorch
   - torchvision
-  # - cudatoolkit=9.2
+  - cudatoolkit=9.2
   - absl-py
   - pyparsing
   - pip
