--- a/conda_env.yml
+++ b/conda_env.yml
@@ -12,13 +12,20 @@ dependencies:
   - pip:
     - gym==0.19.0
     - termcolor
-    # - git+git://github.com/deepmind/dm_control.git these are installed locally now since they had to be modified
-    # - git+git://github.com/denisyarats/dmc2gym.git
+    # - git+https://github.com/deepmind/dm_control.git # these are installed locally now since they had to be modified
+    # - git+https://github.com/denisyarats/dmc2gym.git
     - ./dm_control
     - -e ./dmc2gym
+
+
     - tb-nightly
     - imageio
     - imageio-ffmpeg
     - torchaudio
-    - gymnasium==0.27.1
-    - highway-env
+
+
+
+
+    # - gymnasium==0.27.1
+    # - highway-env
+    # - gymnasium[box2d]
